[gd_scene load_steps=2 format=2]

[ext_resource path="res://DebugConsole.gd" type="Script" id=1]

[node name="DebugConsole" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_top = 350.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.376471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 360.0
margin_right = 1012.0
margin_bottom = 590.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 2.0
margin_right = 1000.0
margin_bottom = 202.0
custom_constants/separation = 0

[node name="LiveContainer" type="ScrollContainer" parent="MainContainer/OutputContainer"]
margin_right = 500.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 200 )
scroll_horizontal_enabled = false

[node name="TextContainer" type="VBoxContainer" parent="MainContainer/OutputContainer/LiveContainer"]
margin_right = 500.0
margin_bottom = 200.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainContainer/OutputContainer/LiveContainer/TextContainer"]
margin_right = 500.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "> Label"
autowrap = true

[node name="FixedContainer" type="ScrollContainer" parent="MainContainer/OutputContainer"]
margin_left = 500.0
margin_right = 1000.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 0 )
scroll_horizontal_enabled = false

[node name="TextContainer" type="VBoxContainer" parent="MainContainer/OutputContainer/FixedContainer"]
margin_right = 500.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 206.0
margin_right = 1000.0
margin_bottom = 230.0

[node name="CommandLine" type="LineEdit" parent="MainContainer/InputContainer"]
margin_right = 893.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="MainContainer/InputContainer"]
margin_left = 897.0
margin_right = 943.0
margin_bottom = 24.0
text = "SEND"

[node name="PauseButton" type="Button" parent="MainContainer/InputContainer"]
margin_left = 947.0
margin_right = 1000.0
margin_bottom = 24.0
text = "PAUSE"
